# My_ESP-IDF_Components

./: CMakeLists.txt  Install.md  README.md  sdkconfig  sdkconfig.old
components/aliyun_mqtt/doc/: Aliyun MQTT 代码流程.puml
components/aliyun_mqtt/example/main/: CMakeLists.txt  app_aliyun_mqtt.c
components/aliyun_ota/: CMakeLists.txt  Kconfig  README.md
components/aliyun_ota/doc/: Aliyun HTTPS  OTA.md  Aliyun HTTPS OTA 代码流程.md  Aliyun HTTPS OTA 代码流程.puml
components/aliyun_ota/example/: CMakeLists.txt  sdkconfig.defaults
components/aliyun_ota/example/components/aliyun_mqtt/: CMakeLists.txt  Kconfig
components/aliyun_ota/example/components/aliyun_mqtt/example/: CMakeLists.txt
components/aliyun_ota/example/components/aliyun_mqtt/example/main/: Kconfig.projbuild  example_main.c
components/aliyun_ota/example/main/: CMakeLists.txt  Kconfig  app_aliyun_ota.c  example_main.c
components/aliyun_ota/include/: aliyun_ota.h  aliyun_ota_json.h
components/aliyun_ota/src/: aliyun_ota.c  aliyun_ota_json.c
components/task_argv/: CMakeLists.txt  README.md
components/task_argv/main/: CMakeLists.txt  main.c  mult_paramenters.c  single_paramenters.c
components/task_list/: README.md
main/: CMakeLists.txt  main.c
